# agent-churn-visualizer

./: .gitignore  CHURN_PATTERNS.md  PLAN.md  pyproject.toml
churn/: cli.py  labeler.py  nano_agent.py  recorder.py  renderer.py  scorer.py  store.py  tree.py
eval/: run_eval.py
tests/: test_cli.py  test_labeler.py  test_recorder.py  test_renderer.py  test_scorer.py  test_setup.py  test_store.py  test_tree.py
