[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-churn-visualizer"
version = "0.1.0"
description = "Observability layer for agent churn — visualize hypothesis exploration trees"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
churn = "churn.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["churn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
